# allen-interval-relations

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: atomic.rs  atomic_relations.rs  atomics.rs  bound.rs  bounded.rs  bounds.rs  discreteness.rs  end_bound.rs  from_intervals.rs  from_ranges.rs  interval.rs  lib.rs  non_empty.rs  range_bounds.rs  range_bounds_ext.rs  range_relations.rs  relation.rs  start_bound.rs  validator.rs
src/atomic/: bb.rs  be.rs  eb.rs  ee.rs
src/interval/: interval.rs  interval_from.rs  interval_full.rs  interval_to.rs
src/relation/: contains.rs  equals.rs  finishes.rs  meets.rs  overlaps.rs  precedes.rs  starts.rs  tests.rs
tests/: tests.rs
