[package]
name = "allen-intervals"
description = "An efficient implementation of Allen's interval relations for Rust's range types."
repository = "https://github.com/regexident/allen-intervals"
categories = ["date-and-time", "science"]
keywords = [
    "constraints",
    "time-interval",
    "temporal-logic",
    "temporal-reasoning",
    "no_std",
]
license = "MPL-2.0"
edition = "2021"
rust-version = "1.78.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
thiserror = { version = "2.0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
std = ["thiserror"]
